@@ -1,5 +1,7 @@
 2.5.1 () -
 
+- TW-311 Estimated completion in burndown.daily shows impossible results
+         (thanks to  Michele Santullo).
 - TW-1703 When on-modify hook is installed, some messages print UUIDs
           instead of IDs (thanks to Robin Green).
 - TW-1704 Use Task::identifier to reference the Task in the output
